--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -5,5 +5,4 @@ $altbg-color: #d3d7da
 $selection-color: #FFF498
 $text-color: #2E2D33
 
-$link-color: #153715
-$accent-color
+$link-color: $accent-color
